outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-6022473919722061174_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as unvisited nodes decrease) with probabilistic selection and centrality penalty, similar to No.1, but uses a weighted scoring system like No.2, where proximity is inversely proportional to distance and centrality is proportional to average distance, penalizing nodes with high variance.}
                                          ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as unvisited nodes decrease) with probabilistic selection and centrality penalty, similar to No.1, but uses a weighted scoring system like No.2, where proximity is inversely proportional to distance and centrality is proportional to average distance, penalizing nodes with high variance.}
                                          ^
SyntaxError: unmatched ')'
